# GRaLE

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  User_guide.ipynb  __init__.py  core.py  example.py  pyproject.toml  requirements.txt  setup.py
docs/source/: User_guide.ipynb  api.rst  conf.py  index.rst
grale/: __init__.py  core.py
tests/: test.py
